<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trending_on_tv"
                    android:textSize="20sp"
                    android:layout_margin="16dp"
                    android:textColor="@android:color/black"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:id="@+id/bt_home_trending_tvshows_view_all"
                    android:text="@string/view_all"
                    android:layout_margin="16dp"
                    android:background="@drawable/button_bg"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/recycler_view_trending_tvshows"
                android:layoutAnimation="@anim/layout_animation_fall_down">

            </android.support.v7.widget.RecyclerView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre_action"
                    android:textSize="20sp"
                    android:layout_margin="16dp"
                    android:textColor="@android:color/black"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:id="@+id/bt_home_action_tvshows_view_all"
                    android:text="@string/view_all"
                    android:layout_margin="16dp"
                    android:background="@drawable/button_bg"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/recycler_view_action_tvshows"
                android:layoutAnimation="@anim/layout_animation_fall_down">

            </android.support.v7.widget.RecyclerView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre_comedy"
                    android:textSize="20sp"
                    android:layout_margin="16dp"
                    android:textColor="@android:color/black"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:id="@+id/bt_home_comedy_tvshows_view_all"
                    android:text="@string/view_all"
                    android:layout_margin="16dp"
                    android:background="@drawable/button_bg"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/recycler_view_comedy_tvshows"
                android:layoutAnimation="@anim/layout_animation_fall_down">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>